Initial sinatra config

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>kevinyaro.ch</title>
-  <description>Kevin Yaroch's redundant webpage</description>
+  <meta name="description" content="Kevin Yaroch's redundant webpage" />
   <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
